--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,10 @@
   "author": "Robert Aboukhalil",
   "license": "MIT",
   "dependencies": {
-    "@robertaboukhalil/aioli": "0.1.9"
+    "@robertaboukhalil/aioli": "0.1.9",
+    "jquery": "3.2.1",
+    "bootstrap": "4.0.0",
+    "popper.js": "1.12.3",
+    "handsontable": "7.2.2"
   }
 }
